practica/CMD.txt
Microsoft Windows [Versión 10.0.26100.6899]
(c) Microsoft Corporation. Todos los derechos reservados.

C:\Users\Moren>cd..

C:\Users>cd..

C:\>cd practica

C:\practica>dir
 El volumen de la unidad C es OS
 El número de serie del volumen es: B21D-8899

 Directorio de C:\practica

14/11/2025  04:52 p. m.    <DIR>          .
24/11/2025  04:28 p. m.               107 Prueba.java
               1 archivos            107 bytes
               1 dirs  117,643,644,928 bytes libres

C:\practica>javac Prueba.java
Prueba.java:1: error: class prueba is public, should be declared in a file named prueba.java
public class prueba{
       ^
Prueba.java:2: error: cannot find symbol
        public static void main (string[] args){
                                 ^
  symbol:   class string
  location: class prueba
2 errors

C:\practica>Prueba.java

C:\practica>dir
 El volumen de la unidad C es OS
 El número de serie del volumen es: B21D-8899

 Directorio de C:\practica

14/11/2025  04:52 p. m.    <DIR>          .
24/11/2025  10:50 p. m.               107 Prueba.java
               1 archivos            107 bytes
               1 dirs  117,638,508,544 bytes libres

C:\practica>javac Prueba.java
Prueba.java:1: error: class prueba is public, should be declared in a file named prueba.java
public class prueba{
       ^
1 error

C:\practica>dir
 El volumen de la unidad C es OS
 El número de serie del volumen es: B21D-8899

 Directorio de C:\practica

14/11/2025  04:52 p. m.    <DIR>          .
24/11/2025  10:52 p. m.               107 Prueba.java
               1 archivos            107 bytes
               1 dirs  117,644,722,176 bytes libres

C:\practica>javac Prueba.java

C:\practica>dir
 El volumen de la unidad C es OS
 El número de serie del volumen es: B21D-8899

 Directorio de C:\practica

24/11/2025  10:52 p. m.    <DIR>          .
24/11/2025  10:52 p. m.               416 Prueba.class
24/11/2025  10:52 p. m.               107 Prueba.java
               2 archivos            523 bytes
               1 dirs  117,644,566,528 bytes libres